# librcsc

./: CMakeLists.txt  README_ZH.md  cmake_uninstall.cmake.in  conanfile.py  configure.ac  configure~
example/: CMakeLists.txt  loader_main.cpp
m4/: ax_boost_system.m4
rcsc/: CMakeLists.txt  Makefile.am  librcsc_dummy.cpp
rcsc/coach/: coach_intercept_predictor.cpp
rcsc/common/: online_client.cpp  player_param.cpp
rcsc/geom/: sector_2d.cpp  sector_2d.h  test_rundom_convex_hull.cpp
rcsc/net/: abstract_socket.cpp  host_address.cpp  tcp_socket.cpp  udp_socket.cpp
rcsc/player/: localization_default.cpp  player_agent.cpp
rcsc/rcg/: handler.cpp  parser_v2.cpp  parser_v3.cpp  serializer.cpp  serializer_json.cpp  serializer_v1.cpp  serializer_v2.cpp  serializer_v3.cpp  serializer_v4.cpp  serializer_v5.cpp  serializer_v6.cpp  types.cpp  types.h  util.cpp
rcsc/rcg/simdjson/: simdjson.h
src/: CMakeLists.txt  Makefile.am  rcg2txt.cpp  resultprinter.cpp
